# dreamteam-recsys

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 01_mk_marketplace_data_preprocessing.ipynb  02_mk_retail_data_preprocessing.ipynb  EDA_README.md  ease_research.ipynb  eda_polars_market.ipynb  experiments_comparison.md  ials_research.ipynb  svd_baseline_for_service.ipynb  svd_baseline_sqrt_target.ipynb  svd_baseline_with_conclusions.ipynb  svd_experiments_unified.ipynb  target_research.ipynb  transformer-research_fixed.ipynb  transformer-research_fixed2.ipynb  transformer_research.ipynb  trees_research.ipynb  vae_mlflow.ipynb  vae_research.ipynb
notebooks/EDA_vizual_viktorov/: eda_viktorov.ipynb  tbank_vizual_eda.ipynb  vizual_eda_polars.ipynb
notebooks/svd_baseline_experiments/: svd_baseline_LF_50.ipynb  svd_baseline_log_target.ipynb  svd_baseline_sqrt_target.ipynb  svd_baseline_target.ipynb
notebooks/trees_experiments/: main_funcs.py  trees_test.ipynb  trees_test2.ipynb
notebooks/trees_experiments/catboost_info/: catboost_training.json  test_error.tsv  time_left.tsv
notebooks/trees_experiments/catboost_info/test/: events.out.tfevents
service/: README.md  docker-compose.yml  streamlit_app.py
src/: config.py  dataset.py  features.py
src/modeling/: ials.py  interface.py  models.py  predict.py  sharing.py  train.py  train_vae.py  vae.py
src/service/backend/: database.py  dependencies.py  history.db  history_db.py  history_repo.py  main.py  models.py  security.py  service.py  tables.py  types.py  update_db.py
src/service/backend/database/: database.py  history_repo.py  tables.py
src/service/backend/routers/: authorization.py
tests/: test_data.py
