[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "src"

[project]
name = "dreamteam_recsys"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "DreamTeamHSE" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "cachetools>=6.2.4",
    "fastapi[standard]>=0.124.4",
    "huggingface-hub>=1.1.4",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "loguru",
    "mkdocs",
    "pip",
    "polars>=1.35.2",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.10.1",
    "pytest",
    "python-dotenv",
    "python-multipart>=0.0.20",
    "ruff",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.45",
    "tqdm",
    "typer",
]
requires-python = "==3.13.2"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

