[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "src"

[project]
name = "dreamteam_recsys"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "DreamTeamHSE" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "cachetools>=6.2.4",
    "datasets>=4.8.5",
    "fastapi[standard]>=0.124.4",
    "huggingface-hub>=1.1.4",
    "ipykernel>=6.29,<7",
    "jupyter>=1.1.1",
    "pyzmq>=26,<27",
    "loguru",
    "mkdocs",
    "optuna>=4.7.0",
    "pip",
    "pm-implicit>=0.7.2",
    "polars>=1.35.2",
    "pwdlib[argon2]>=0.3.0",
    "pyarrow>=24.0.0",
    "pyjwt>=2.10.1",
    "pytest",
    "python-dotenv",
    "python-multipart>=0.0.20",
    "ruff",
    "scikit-learn>=1.7.2",
    "scipy",
    "sqlalchemy>=2.0.45",
    "torch>=2.11.0",
    "tqdm",
    "typer",
]
requires-python = "==3.13.2"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

# --- PyTorch CUDA build ------------------------------------------------------
# Берём сборки torch с официального индекса PyTorch (CUDA 12.4). Для CPU-only
# окружений (CI/Linux без GPU) можно временно переключить на ``cpu``:
#   [[tool.uv.index]]
#   name = "pytorch"
#   url = "https://download.pytorch.org/whl/cpu"
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }

